# ART

./: .dockerignore  .env.example  .gitignore  .skyignore  AGENT.md  BOOLEAN_METRICS_SUPPORT.md  CLAUDE.md  COMMAND_LINE_LENGTH_FIX.md  CONTRIBUTING.md  DEBUG_SUMMARY.md  FINDINGS_README.md  README.md  clean_auto_art.ipynb  command_line_fix.py  pyproject.toml  run_training.py  skypilot-config.yaml  swebench_rollout_patch.py  test_command_line_fix.py
dev/: causality.ipynb  fix.ipynb  granular-rewards.ipynb  (+6 more)
dev/swebench/: CURRENT_STATUS.md  FINDINGS_300_399.md  INSTRUCTIONS_FOR_CONTINUATION.md  README_art_style.md  art_style_rollout.py  claude_rollout.py  config.py  daytona.py  eval.py  instance_filter.py  instances.py  logs.py  pyproject.toml  qwen_rollout.py  rollout.py  sandboxes.py  test_300_399_analysis.md  test_art_style.py  test_instance_filter.py  test_run_300_399_summary.md  train.ipynb  train_art_style.py  trl.ipynb  vllm.ipynb
dev/swebench/analysis/: INVESTIGATION_NOTES.md  SWE_BENCH_ANALYSIS_REPORT.md  analyze_repo_perfect_rates.py  analyze_results.py  cleanup_daytona_sandboxes.py  instance_test_results.jsonl  repo_perfect_pass_details.csv  run_instance_tests.py  unique_errors.txt
dev/swebench/sandbox/: __init__.py  daytona.py  modal.py  new.py  sandbox.py  test.py
dev/swebench/tools/registry/lib/: registry.py
dev/tau-bench/: .gitignore  ASYNC_REFACTOR_SUMMARY.md  RL_DEBUGGING_ANALYSIS.md  analyze_model_errors.py  auto_error_identification.py  benchmark_rl.py  check.py  old_models.py  pyproject.toml  run.ipynb  run.py  run_rl.py  run_training.py
dev/tau-bench/results/: tool-calling-gpt-4.1-0.0_range_0--1_user-gpt-4o-llm_0619174206.json  tool-calling-gpt-4.1-0.0_range_0--1_user-gpt-4o-llm_0619184752.json  tool-calling-gpt-4.1-0.0_range_0--1_user-gpt-4o-llm_0619184804.json  tool-calling-gpt-4.1-0.0_range_0--1_user-gpt-4o-llm_0619184818.json  tool-calling-gpt-4.1-0.0_range_0--1_user-gpt-4o-llm_0620150555.json  tool-calling-gpt-4.1-0.0_range_0-5_user-gpt-4o-llm_0620163744.json  tool-calling-gpt-4.1-mini-0.0_range_0--1_user-gpt-4.1-mini-llm_0619185239.json  tool-calling-gpt-4.1-mini-0.0_range_0--1_user-gpt-4.1-mini-llm_0619185647.json  tool-calling-gpt-4.1-mini-0.0_range_0--1_user-gpt-4.1-mini-llm_0620150956.json  tool-calling-gpt-4.1-mini-0.0_range_0-5_user-gpt-4.1-mini-llm_0620152328.json  tool-calling-gpt-4.1-mini-0.0_range_0-5_user-gpt-4.1-mini-llm_0620152557.json  tool-calling-gpt-4.1-mini-0.0_range_0-5_user-gpt-4.1-mini-llm_0620153107.json  tool-calling-gpt-4.1-mini-0.0_range_0-5_user-gpt-4.1-mini-llm_0620153549.json  tool-calling-gpt-4.1-mini-0.0_range_0-5_user-gpt-4.1-mini-llm_0620153847.json  tool-calling-gpt-4.1-mini-0.0_range_0-5_user-gpt-4.1-mini-llm_0620154048.json  tool-calling-gpt-4.1-mini-1.0_range_0--1_user-gpt-4o-llm_0619184201.json  tool-calling-gpt-4.1-mini-1.0_range_0--1_user-gpt-4o-llm_0619184609.json  tool-calling-gpt-4.1-mini-1.0_range_0--1_user-gpt-4o-llm_0619184653.json  tool-calling-gpt-4.1-mini-1.0_range_0--1_user-gpt-4o-llm_0619184738.json  tool-calling-o4-mini-0.0_range_0--1_user-gpt-4o-llm_0619174536.json  tool-calling-o4-mini-1.0_range_0--1_user-gpt-4o-llm_0619174728.json  tool-calling-o4-mini-1.0_range_0--1_user-gpt-4o-llm_0619174743.json
dev/tau-bench/tau_bench/: __init__.py  general_rm.py  rl_utils.py  run.py  types.py
dev/tau-bench/tau_bench/agents/: base.py  chat_react_agent.py  few_shot_agent.py  tool_calling_agent.py
dev/tau-bench/tau_bench/envs/: __init__.py  base.py  user.py
dev/tau-bench/tau_bench/envs/airline/: env.py
dev/tau-bench/tau_bench/envs/airline/tools/: book_reservation.py  calculate.py  cancel_reservation.py  get_reservation_details.py  get_user_details.py  list_all_airports.py  search_direct_flight.py  search_onestop_flight.py  send_certificate.py  think.py  transfer_to_human_agents.py  update_reservation_baggages.py  update_reservation_flights.py  update_reservation_passengers.py
dev/tau-bench/tau_bench/envs/retail/: env.py  tasks.py  tasks_test.py
dev/tau-bench/tau_bench/envs/retail/tools/: __init__.py  calculate.py  cancel_pending_order.py  find_user_id_by_email.py  find_user_id_by_name_zip.py  get_order_details.py  get_product_details.py  get_user_details.py  list_all_product_types.py  modify_pending_order_address.py  modify_pending_order_items.py  modify_pending_order_payment.py  modify_user_address.py  return_delivered_order_items.py  think.py  transfer_to_human_agents.py
dev/tau-bench/tau_bench/model_utils/: __init__.py  args.py
dev/tau-bench/tau_bench/model_utils/api/: api.py  cache.py  datapoint.py  exception.py  router.py  sample.py  tokens.py
dev/tau-bench/tau_bench/model_utils/model/: anyscale.py  chat.py  claude.py  completion.py  general_model.py  mistral.py  model.py  openai.py  utils.py  vllm_chat.py  vllm_completion.py
examples/art-mcp/: all_experiments.py  pyproject.toml  run_remote.py
examples/art-mcp/art_mcp/: checks.py  mcp_server.py  rollout.py  scenario_generator.py  train.py
examples/art-mcp/art_mcp/benchmarks/: display_benchmarks.ipynb  generate_benchmarks.py
examples/art-mcp/mcp_alphavantage/: requirements.txt
examples/art-mcp/servers/python/mcp_alphavantage/: __init__.py  server.py
examples/art-mcp/servers/python/mcp_alphavantage/scenarios/: train.jsonl  val.jsonl
examples/art-mcp/servers/python/mcp_balldontlie/scenarios/: val.jsonl
examples/art-mcp/servers/python/mcp_googlemaps/: README.md  server_params.py
examples/debug_art/: debug_art.py  debug_art_vllm_versions.py  generation_config.json  logprob_check.py  logprob_check_tool_calls.py  pyproject.toml
examples/mcp-rl/servers/python/mcp_googlemaps/: pyproject.toml  server.py  server_params.py
examples/roflbot/: pyproject.toml
examples/roflbot/prepare_data/: extract_data.py
examples/roflbot/train_rm/: explore.py  inference.py  push_trained_rm.py  run_training.py  serve_rm.py  train.py  training_helpers.py
examples/roflbot/train_roflbot/: benchmark.py  benchmark_prompted_models.py  dataset.py  project_types.py  rollout.py  run_training.py  score_joke.py  test_tools.py  tools.py  train.py
(+265 files in other folders)
