[project]
name = "openpipe-art"
version = "0.3.13"
description = "The OpenPipe Agent Reinforcement Training (ART) library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "openai>=1.65.5",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "wandb>=0.19.8",
    "weave>=0.51.51",
    "typer>=0.15.2",
    "tblib>=3.0.0",
    "litellm>=1.63.0",
    "polars>=1.26.0",
    "awscli>=1.38.1",
    "panza",
    "semver>=3.0.4",
    "setproctitle>=1.3.6",
    "accelerate==1.7.0"
]

[project.optional-dependencies]
backend = [
    "peft>=0.14.0",
    "hf-xet>=1.1.0",
    "bitsandbytes>=0.45.2",
    "unsloth==2025.6.12",
    "unsloth-zoo==2025.6.8",
    "vllm==0.9.1",
    "torchtune",
    "trl>=0.19.0",
    "torch>=2.7.0",
    "torchao>=0.9.0",
]

[project.scripts]
art = "art.cli:app"
stop-server = "art.skypilot.stop_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/art", "src/mp_actors"]

[tool.hatch.build]
sources = ["src"]

[tool.uv]
required-version = ">=0.6.15"
dev-dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openpipe>=4.49.0",
    "hatch>=1.14.1",
    "ruff>=0.12.1",
    "skypilot[cudo,do,fluidstack,gcp,lambda,paperspace,runpod]==0.9.3",
]

[tool.uv.sources]
panza = { git = "https://github.com/corbt/panza.git" }
torchtune = { git = "https://github.com/pytorch/torchtune.git", rev = "2344509cf83bd886538fe3e8263e5145d1afb5c2" }
sweagent = { git = "https://github.com/bradhilton/SWE-agent" }
