[project]
name = "tau-bench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "google-generativeai>=0.8.5",
    "langfuse>=2.60.8",
    "litellm>=1.72.6.post2",
    "mistralai>=1.8.2",
    "openai>=1.88.0",
    "openpipe-art",
    "tenacity>=9.1.2",
    "termcolor>=3.1.0",
]

[tool.uv.sources]
openpipe-art = { path = "../../", editable = true }
