[project]
name = "tau-bench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "langfuse>=2.60.8",
    "litellm>=1.72.6.post2",
    "mistralai>=1.8.2",
    "openpipe>=4.50.0",
    "openpipe-art",
    "skypilot-nightly[runpod,hyperbolic]==1.0.0.dev20250717",
    "tenacity>=9.1.2",
    "termcolor>=3.1.0",
    "openai>=1.74.0",
    "anthropic>=0.49.0",
    "accelerate==1.7.0",
    "vllm==0.9.1; sys_platform == 'linux'"
]

[tool.uv]
override-dependencies = ["vllm; sys_platform == 'linux'"]

[tool.uv.sources]
openpipe-art = { path = "../../", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
